User-visible changes in version 1.2.2  (2013-04-  ):
* simplified fitting (so that using external libraries is easier):
  - removed stopping criterium based on iterations. The max. number of
    WSSR evaluations can be used instead.
  - removed fit continuation (fit +N)
* covariance matrix and standard errors are calculated using MPFIT library
* GUI: added menu Session > Recent Scripts

User-visible changes in version 1.2.1  (2012-11-05):
* added commands '=' and 'exec=' - shorthands 'lua return' and 'lua F:execute'
* API: default dataset in a few functions changed from @0 to the currently used
* GUI: new dialog GUI > Configure > Default Directories
* a few tweaks and fixes related to printing, and other bug fixes

User-visible changes in version 1.2.0  (2012-05-24):
* added fitting method "mpfit" -- wrapper around MINPACK-1 based MPFIT library
  (http://www.physics.wisc.edu/~craigm/idl/cmpfit.html)
* changed public API of libfityk; now cfityk uses only public API
* added C API and Ruby and Java bindings to libfityk
* enhanced Python API and added Python equivalent of cfityk (samples/cfityk.py)
* CLI: cfityk can be built with libedit (but it works better with readline)
* in scripts, backslash (\) at the end of line means line continuation
* bug fixes, as usually

User-visible changes in version 1.1.1  (2011-09-28):
* option exit_on_warning=0/1 was replaced with on_error=stop/exit; new option
  on_error=nothing allows to ignore errors in script.
* current working directory can be changed using new option `cwd'
* GUI: a new dialog for Model > Export Formula
* minor bug fixes

User-visible changes in version 1.1.0  (2011-07-18):
* embedded Lua (lightweight programming language)
* syntax changes and enhancements in dataset transformations (@n = ...);
  example: "@0 = @0 - 0.23 * @1" removes (background) @1 with y's scaled
  by factor 0.23 from dataset @0; if @0 and @1 have different x's, linear
  interpolation is used.