@@ -401,6 +401,18 @@ static int lua_vector_iterator(lua_State* L)
     return 2;
 }
 
+// calls f(obj, g(arg1, ...)), where f and g are upvalues and obj is arg
+static int lua_nested_call(lua_State *L)
+{
+    lua_pushvalue(L, lua_upvalueindex(2)); // get inner function
+    lua_insert(L, 2);                      // put it under arguments (exc. obj)
+    lua_call(L, lua_gettop(L)-2, 1);       // call inner function
+    lua_pushvalue(L, lua_upvalueindex(1)); // get outer function
+    lua_insert(L, 1);                      // put it under argument
+    lua_call(L, 2, 0);                     // call outer function
+    return 0;
+}
+
 lua_State* UserInterface::get_lua()
 {
     if (L_ != NULL)
@@ -430,6 +442,17 @@ lua_State* UserInterface::get_lua()
     Fityk *f = new Fityk(F_);
     SWIG_NewPointerObj(L_, f, type_info, owned);
     lua_setglobal(L_, "F");
+
+    // add method F.executef()
+    lua_getglobal(L_, "F");
+    // SWIG keeps class methods in ".fn" table in metatable
+    luaL_getmetafield(L_, -1, ".fn");
+    lua_getglobal(L_, "string");
+    lua_getfield(L_, -3, "out"); // F.out
+    lua_getfield(L_, -2, "format"); // string.format
+    lua_pushcclosure(L_, lua_nested_call, 2);
+    lua_setfield(L_, -3, "executef"); // .fn[executef] = closure
+    lua_pop(L_, 3); // pop string, .fn and F tables
 
     // redefine print
     lua_pushlightuserdata(L_, this);
