@@ -5,6 +5,8 @@ User-visible changes in version 1.2.2  (2013-04-  ):
   - removed fit continuation (fit +N)
 * covariance matrix and standard errors are calculated using MPFIT library
 * GUI: added menu Session > Recent Scripts
+* Lua: added F:executef()
+
 
 User-visible changes in version 1.2.1  (2012-11-05):
 * added commands '=' and 'exec=' - shorthands 'lua return' and 'lua F:execute'
